--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jingo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://williamjingo.github.io/jingo_portfolio/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
