--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,9 +3,19 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "https://res.cloudinary.com/wljin/image/upload/v1605629337/personal%20website/fav_mftz1c.png",
+      "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/png"
+      "type": "image/x-icon"
+    },
+    {
+      "src": "logo192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "logo512.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
   "start_url": ".",
